practica5.2/Sintactico.output
Gramática

    0 $accept: programa $end

    1 $@1: %empty

    2 programa: $@1 PRINCIPAL bloque

    3 $@2: %empty

    4 bloque: INICIOBLOQUE $@2 declar_variables_locales declar_subprogs sentencias FINBLOQUE

    5 $@3: %empty

    6 declar_variables_locales: VAR $@3 variables_locales PUNTOYCOMA
    7                         | %empty

    8 variables_locales: variables_locales cuerpo_declar_variables
    9                  | cuerpo_declar_variables

   10 cuerpo_declar_variables: tipo lista_variables PUNTOYCOMA
   11                        | error

   12 lista_variables: variable COMA lista_variables
   13                | variable error lista_variables
   14                | variable

   15 variable: IDENT

   16 declar_subprogs: declar_subprogs declar_subprog
   17                | %empty

   18 $@4: %empty

   19 declar_subprog: cabecera_subprograma $@4 INICIO sentencias FIN PUNTOYCOMA

   20 $@5: %empty

   21 $@6: %empty

   22 cabecera_subprograma: PROCEDIMIENTO IDENT $@5 PARIZQ lista_parametros PARDER $@6 PUNTOYCOMA
   23                     | PROCEDIMIENTO IDENT PUNTOYCOMA

   24 lista_parametros: parametro PUNTOYCOMA lista_parametros
   25                 | parametro error PUNTOYCOMA lista_parametros
   26                 | parametro

   27 parametro: lista_variables DOSP tipo

   28 $@7: %empty

   29 sentencias: $@7 sentencia sentencias
   30           | %empty

   31 $@8: %empty

   32 sentencia: $@8 bloque
   33          | asignacion

   34 $@9: %empty

   35 sentencia: $@9 si PUNTOYCOMA

   36 $@10: %empty

   37 sentencia: $@10 mientras PUNTOYCOMA

   38 $@11: %empty

   39 sentencia: $@11 entrada PUNTOYCOMA

   40 $@12: %empty

   41 sentencia: $@12 salida PUNTOYCOMA
   42          | repetir_hasta PUNTOYCOMA
   43          | llamada_funcion PUNTOYCOMA
   44          | variable AVANRETR PUNTOYCOMA
   45          | DOLAR variable PUNTOYCOMA

   46 asignacion: variable ASIGNACION expresion PUNTOYCOMA

   47 si: SI PARIZQ expresion PARDER ENTONCES sentencia

   48 @13: %empty

   49 $@14: %empty

   50 si: SI PARIZQ expresion PARDER ENTONCES sentencia @13 SINO $@14 sentencia

   51 $@15: %empty

   52 mientras: MIENTRAS PARIZQ expresion PARDER $@15 sentencia

   53 entrada: LEER lista_variables

   54 salida: ESCRIBIR lista_expresiones_cad

   55 repetir_hasta: PARA variable DOSP ASIGNACION expresion HASTA expresion HACER INICIO sentencias FIN

   56 expresion: PARIZQ expresion PARDER
   57          | OPUNARIO expresion
   58          | SUMRES expresion
   59          | expresion OPBINARIO expresion
   60          | expresion OPOR expresion
   61          | expresion OPRELACIONAL expresion
   62          | expresion SUMRES expresion
   63          | expresion OPAND expresion
   64          | expresion OPBINLISTA expresion
   65          | expresion ARROBA expresion
   66          | expresion ARROBA expresion MASMAS expresion
   67          | variable
   68          | constante
   69          | CORIZQ agregado CORDER
   70          | error

   71 lista_expresiones: expresion COMA lista_expresiones
   72                  | expresion

   73 lista_expresiones_cad: exp_cad COMA lista_expresiones_cad
   74                      | exp_cad

   75 exp_cad: expresion
   76        | CONSTCADENA

   77 constante: CONSTENTERA
   78          | CONSTLOGICA
   79          | CONSTREAL
   80          | CONSTCARACTER

   81 $@16: %empty

   82 llamada_funcion: IDENT PARIZQ $@16 lista_expresiones PARDER
   83                | IDENT PARIZQ PARDER

   84 agregado: agregado_enteros
   85         | agregado_reales
   86         | agregado_caracteres
   87         | agregado_booleanos
   88         | agregado_cadenas

   89 agregado_enteros: agregado_enteros COMA CONSTENTERA
   90                 | CONSTENTERA

   91 agregado_reales: agregado_reales COMA CONSTREAL
   92                | CONSTREAL

   93 agregado_caracteres: agregado_caracteres COMA CONSTCARACTER
   94                    | CONSTCARACTER

   95 agregado_booleanos: agregado_booleanos COMA CONSTLOGICA
   96                   | CONSTLOGICA

   97 agregado_cadenas: agregado_cadenas COMA CONSTCADENA
   98                 | CONSTCADENA

   99 tipo: LISTA TIPOBASICO
  100     | TIPOBASICO
  101     | error


Terminales con las reglas donde aparecen

    $end (0) 0
    error (256) 11 13 25 70 101
    OPOR (258) 60
    OPAND (259) 63
    OPRELACIONAL (260) 61
    SUMRES (261) 58 62
    OPBINARIO (262) 59
    OPUNARIO (263) 57
    OPBINLISTA (264) 64
    ARROBA (265) 65 66
    MASMAS (266) 66
    ASIGNACION (267) 46 55
    CORIZQ (268) 69
    CORDER (269) 69
    TIPOBASICO (270) 99 100
    CONSTENTERA (271) 77 89 90
    CONSTLOGICA (272) 78 95 96
    CONSTREAL (273) 79 91 92
    CONSTCARACTER (274) 80 93 94
    CONSTCADENA (275) 76 97 98
    COMA (276) 12 71 73 89 91 93 95 97
    PARDER (277) 22 47 50 52 56 82 83
    PARIZQ (278) 22 47 50 52 56 82 83
    PUNTOYCOMA (279) 6 10 19 22 23 24 25 35 37 39 41 42 43 44 45 46
    INICIOBLOQUE (280) 4
    FINBLOQUE (281) 4
    VAR (282) 6
    SI (283) 47 50
    SINO (284) 50
    MIENTRAS (285) 52
    LEER (286) 53
    ESCRIBIR (287) 54
    HASTA (288) 55
    PRINCIPAL (289) 2
    PROCEDIMIENTO (290) 22 23
    DOSP (291) 27 55
    INICIO (292) 19 55
    FIN (293) 19 55
    ENTONCES (294) 47 50
    PARA (295) 55
    HACER (296) 55
    AVANRETR (297) 44
    DOLAR (298) 45
    LISTA (299) 99
    IDENT (300) 15 22 23 82 83


No terminales con las reglas donde aparecen

    $accept (46)
        on left: 0
    programa (47)
        on left: 2
        on right: 0
    $@1 (48)
        on left: 1
        on right: 2
    bloque (49)
        on left: 4
        on right: 2 32
    $@2 (50)
        on left: 3
        on right: 4
    declar_variables_locales (51)
        on left: 6 7
        on right: 4
    $@3 (52)
        on left: 5
        on right: 6
    variables_locales (53)
        on left: 8 9
        on right: 6 8
    cuerpo_declar_variables (54)
        on left: 10 11
        on right: 8 9
    lista_variables (55)
        on left: 12 13 14
        on right: 10 12 13 27 53
    variable (56)
        on left: 15
        on right: 12 13 14 44 45 46 55 67
    declar_subprogs (57)
        on left: 16 17
        on right: 4 16
    declar_subprog (58)
        on left: 19
        on right: 16
    $@4 (59)
        on left: 18
        on right: 19
    cabecera_subprograma (60)
        on left: 22 23
        on right: 19
    $@5 (61)
        on left: 20
        on right: 22
    $@6 (62)
        on left: 21
        on right: 22
    lista_parametros (63)
        on left: 24 25 26
        on right: 22 24 25
    parametro (64)
        on left: 27
        on right: 24 25 26
    sentencias (65)
        on left: 29 30
        on right: 4 19 29 55
    $@7 (66)
        on left: 28
        on right: 29
    sentencia (67)
        on left: 32 33 35 37 39 41 42 43 44 45
        on right: 29 47 50 52
    $@8 (68)
        on left: 31
        on right: 32
    $@9 (69)
        on left: 34
        on right: 35
    $@10 (70)
        on left: 36
        on right: 37
    $@11 (71)
        on left: 38
        on right: 39
    $@12 (72)
        on left: 40
        on right: 41
    asignacion (73)
        on left: 46
        on right: 33
    si (74)
        on left: 47 50
        on right: 35
    @13 (75)
        on left: 48
        on right: 50
    $@14 (76)
        on left: 49
        on right: 50
    mientras (77)
        on left: 52
        on right: 37
    $@15 (78)
        on left: 51
        on right: 52
    entrada (79)
        on left: 53
        on right: 39
    salida (80)
        on left: 54
        on right: 41
    repetir_hasta (81)
        on left: 55
        on right: 42
    expresion (82)
        on left: 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70
        on right: 46 47 50 52 55 56 57 58 59 60 61 62 63 64 65 66 71 72 75
    lista_expresiones (83)
        on left: 71 72
        on right: 71 82
    lista_expresiones_cad (84)
        on left: 73 74
        on right: 54 73
    exp_cad (85)
        on left: 75 76
        on right: 73 74
    constante (86)
        on left: 77 78 79 80
        on right: 68
    llamada_funcion (87)
        on left: 82 83
        on right: 43
    $@16 (88)
        on left: 81
        on right: 82
    agregado (89)
        on left: 84 85 86 87 88
        on right: 69
    agregado_enteros (90)
        on left: 89 90
        on right: 84 89
    agregado_reales (91)
        on left: 91 92
        on right: 85 91
    agregado_caracteres (92)
        on left: 93 94
        on right: 86 93
    agregado_booleanos (93)
        on left: 95 96
        on right: 87 95
    agregado_cadenas (94)
        on left: 97 98
        on right: 88 97
    tipo (95)
        on left: 99 100 101
        on right: 10 27


Estado 0

    0 $accept: . programa $end

    $default  reduce usando la regla 1 ($@1)

    programa  ir al estado 1
    $@1       ir al estado 2


Estado 1

    0 $accept: programa . $end

    $end  desplazar e ir al estado 3


Estado 2

    2 programa: $@1 . PRINCIPAL bloque

    PRINCIPAL  desplazar e ir al estado 4


Estado 3

    0 $accept: programa $end .

    $default  aceptar


Estado 4

    2 programa: $@1 PRINCIPAL . bloque

    INICIOBLOQUE  desplazar e ir al estado 5

    bloque  ir al estado 6


Estado 5

    4 bloque: INICIOBLOQUE . $@2 declar_variables_locales declar_subprogs sentencias FINBLOQUE

    $default  reduce usando la regla 3 ($@2)

    $@2  ir al estado 7


Estado 6

    2 programa: $@1 PRINCIPAL bloque .

    $default  reduce usando la regla 2 (programa)


Estado 7

    4 bloque: INICIOBLOQUE $@2 . declar_variables_locales declar_subprogs sentencias FINBLOQUE

    VAR  desplazar e ir al estado 8

    $default  reduce usando la regla 7 (declar_variables_locales)

    declar_variables_locales  ir al estado 9


Estado 8

    6 declar_variables_locales: VAR . $@3 variables_locales PUNTOYCOMA

    $default  reduce usando la regla 5 ($@3)

    $@3  ir al estado 10


Estado 9

    4 bloque: INICIOBLOQUE $@2 declar_variables_locales . declar_subprogs sentencias FINBLOQUE

    $default  reduce usando la regla 17 (declar_subprogs)

    declar_subprogs  ir al estado 11


Estado 10

    6 declar_variables_locales: VAR $@3 . variables_locales PUNTOYCOMA

    error       desplazar e ir al estado 12
    TIPOBASICO  desplazar e ir al estado 13
    LISTA       desplazar e ir al estado 14

    variables_locales        ir al estado 15
    cuerpo_declar_variables  ir al estado 16
    tipo                     ir al estado 17


Estado 11

    4 bloque: INICIOBLOQUE $@2 declar_variables_locales declar_subprogs . sentencias FINBLOQUE
   16 declar_subprogs: declar_subprogs . declar_subprog

    PROCEDIMIENTO  desplazar e ir al estado 18

    FINBLOQUE  reduce usando la regla 30 (sentencias)
    $default   reduce usando la regla 28 ($@7)

    declar_subprog        ir al estado 19
    cabecera_subprograma  ir al estado 20
    sentencias            ir al estado 21
    $@7                   ir al estado 22


Estado 12

   11 cuerpo_declar_variables: error .
  101 tipo: error .

    IDENT     reduce usando la regla 101 (tipo)
    $default  reduce usando la regla 11 (cuerpo_declar_variables)


Estado 13

  100 tipo: TIPOBASICO .

    $default  reduce usando la regla 100 (tipo)


Estado 14

   99 tipo: LISTA . TIPOBASICO

    TIPOBASICO  desplazar e ir al estado 23


Estado 15

    6 declar_variables_locales: VAR $@3 variables_locales . PUNTOYCOMA
    8 variables_locales: variables_locales . cuerpo_declar_variables

    error       desplazar e ir al estado 12
    TIPOBASICO  desplazar e ir al estado 13
    PUNTOYCOMA  desplazar e ir al estado 24
    LISTA       desplazar e ir al estado 14

    cuerpo_declar_variables  ir al estado 25
    tipo                     ir al estado 17


Estado 16

    9 variables_locales: cuerpo_declar_variables .

    $default  reduce usando la regla 9 (variables_locales)


Estado 17

   10 cuerpo_declar_variables: tipo . lista_variables PUNTOYCOMA

    IDENT  desplazar e ir al estado 26

    lista_variables  ir al estado 27
    variable         ir al estado 28


Estado 18

   22 cabecera_subprograma: PROCEDIMIENTO . IDENT $@5 PARIZQ lista_parametros PARDER $@6 PUNTOYCOMA
   23                     | PROCEDIMIENTO . IDENT PUNTOYCOMA

    IDENT  desplazar e ir al estado 29


Estado 19

   16 declar_subprogs: declar_subprogs declar_subprog .

    $default  reduce usando la regla 16 (declar_subprogs)


Estado 20

   19 declar_subprog: cabecera_subprograma . $@4 INICIO sentencias FIN PUNTOYCOMA

    $default  reduce usando la regla 18 ($@4)

    $@4  ir al estado 30


Estado 21

    4 bloque: INICIOBLOQUE $@2 declar_variables_locales declar_subprogs sentencias . FINBLOQUE

    FINBLOQUE  desplazar e ir al estado 31


Estado 22

   29 sentencias: $@7 . sentencia sentencias

    PARA   desplazar e ir al estado 32
    DOLAR  desplazar e ir al estado 33
    IDENT  desplazar e ir al estado 34

    SI        reduce usando la regla 34 ($@9)
    MIENTRAS  reduce usando la regla 36 ($@10)
    LEER      reduce usando la regla 38 ($@11)
    ESCRIBIR  reduce usando la regla 40 ($@12)
    $default  reduce usando la regla 31 ($@8)

    variable         ir al estado 35
    sentencia        ir al estado 36
    $@8              ir al estado 37
    $@9              ir al estado 38
    $@10             ir al estado 39
    $@11             ir al estado 40
    $@12             ir al estado 41
    asignacion       ir al estado 42
    repetir_hasta    ir al estado 43
    llamada_funcion  ir al estado 44


Estado 23

   99 tipo: LISTA TIPOBASICO .

    $default  reduce usando la regla 99 (tipo)


Estado 24

    6 declar_variables_locales: VAR $@3 variables_locales PUNTOYCOMA .

    $default  reduce usando la regla 6 (declar_variables_locales)


Estado 25

    8 variables_locales: variables_locales cuerpo_declar_variables .

    $default  reduce usando la regla 8 (variables_locales)


Estado 26

   15 variable: IDENT .

    $default  reduce usando la regla 15 (variable)


Estado 27

   10 cuerpo_declar_variables: tipo lista_variables . PUNTOYCOMA

    PUNTOYCOMA  desplazar e ir al estado 45


Estado 28

   12 lista_variables: variable . COMA lista_variables
   13                | variable . error lista_variables
   14                | variable .

    error  desplazar e ir al estado 46
    COMA   desplazar e ir al estado 47

    PUNTOYCOMA  reduce usando la regla 14 (lista_variables)
    DOSP        reduce usando la regla 14 (lista_variables)


Estado 29

   22 cabecera_subprograma: PROCEDIMIENTO IDENT . $@5 PARIZQ lista_parametros PARDER $@6 PUNTOYCOMA
   23                     | PROCEDIMIENTO IDENT . PUNTOYCOMA

    PUNTOYCOMA  desplazar e ir al estado 48

    $default  reduce usando la regla 20 ($@5)

    $@5  ir al estado 49


Estado 30

   19 declar_subprog: cabecera_subprograma $@4 . INICIO sentencias FIN PUNTOYCOMA

    INICIO  desplazar e ir al estado 50


Estado 31

    4 bloque: INICIOBLOQUE $@2 declar_variables_locales declar_subprogs sentencias FINBLOQUE .

    $default  reduce usando la regla 4 (bloque)


Estado 32

   55 repetir_hasta: PARA . variable DOSP ASIGNACION expresion HASTA expresion HACER INICIO sentencias FIN

    IDENT  desplazar e ir al estado 26

    variable  ir al estado 51


Estado 33

   45 sentencia: DOLAR . variable PUNTOYCOMA

    IDENT  desplazar e ir al estado 26

    variable  ir al estado 52


Estado 34

   15 variable: IDENT .
   82 llamada_funcion: IDENT . PARIZQ $@16 lista_expresiones PARDER
   83                | IDENT . PARIZQ PARDER

    PARIZQ  desplazar e ir al estado 53

    $default  reduce usando la regla 15 (variable)


Estado 35

   44 sentencia: variable . AVANRETR PUNTOYCOMA
   46 asignacion: variable . ASIGNACION expresion PUNTOYCOMA

    ASIGNACION  desplazar e ir al estado 54
    AVANRETR    desplazar e ir al estado 55


Estado 36

   29 sentencias: $@7 sentencia . sentencias

    FINBLOQUE  reduce usando la regla 30 (sentencias)
    FIN        reduce usando la regla 30 (sentencias)
    $default   reduce usando la regla 28 ($@7)

    sentencias  ir al estado 56
    $@7         ir al estado 22


Estado 37

   32 sentencia: $@8 . bloque

    INICIOBLOQUE  desplazar e ir al estado 5

    bloque  ir al estado 57


Estado 38

   35 sentencia: $@9 . si PUNTOYCOMA

    SI  desplazar e ir al estado 58

    si  ir al estado 59


Estado 39

   37 sentencia: $@10 . mientras PUNTOYCOMA

    MIENTRAS  desplazar e ir al estado 60

    mientras  ir al estado 61


Estado 40

   39 sentencia: $@11 . entrada PUNTOYCOMA

    LEER  desplazar e ir al estado 62

    entrada  ir al estado 63


Estado 41

   41 sentencia: $@12 . salida PUNTOYCOMA

    ESCRIBIR  desplazar e ir al estado 64

    salida  ir al estado 65


Estado 42

   33 sentencia: asignacion .

    $default  reduce usando la regla 33 (sentencia)


Estado 43

   42 sentencia: repetir_hasta . PUNTOYCOMA

    PUNTOYCOMA  desplazar e ir al estado 66


Estado 44

   43 sentencia: llamada_funcion . PUNTOYCOMA

    PUNTOYCOMA  desplazar e ir al estado 67


Estado 45

   10 cuerpo_declar_variables: tipo lista_variables PUNTOYCOMA .

    $default  reduce usando la regla 10 (cuerpo_declar_variables)


Estado 46

   13 lista_variables: variable error . lista_variables

    IDENT  desplazar e ir al estado 26

    lista_variables  ir al estado 68
    variable         ir al estado 28


Estado 47

   12 lista_variables: variable COMA . lista_variables

    IDENT  desplazar e ir al estado 26

    lista_variables  ir al estado 69
    variable         ir al estado 28


Estado 48

   23 cabecera_subprograma: PROCEDIMIENTO IDENT PUNTOYCOMA .

    $default  reduce usando la regla 23 (cabecera_subprograma)


Estado 49

   22 cabecera_subprograma: PROCEDIMIENTO IDENT $@5 . PARIZQ lista_parametros PARDER $@6 PUNTOYCOMA

    PARIZQ  desplazar e ir al estado 70


Estado 50

   19 declar_subprog: cabecera_subprograma $@4 INICIO . sentencias FIN PUNTOYCOMA

    FIN       reduce usando la regla 30 (sentencias)
    $default  reduce usando la regla 28 ($@7)

    sentencias  ir al estado 71
    $@7         ir al estado 22


Estado 51

   55 repetir_hasta: PARA variable . DOSP ASIGNACION expresion HASTA expresion HACER INICIO sentencias FIN

    DOSP  desplazar e ir al estado 72


Estado 52

   45 sentencia: DOLAR variable . PUNTOYCOMA

    PUNTOYCOMA  desplazar e ir al estado 73


Estado 53

   82 llamada_funcion: IDENT PARIZQ . $@16 lista_expresiones PARDER
   83                | IDENT PARIZQ . PARDER

    PARDER  desplazar e ir al estado 74

    $default  reduce usando la regla 81 ($@16)

    $@16  ir al estado 75


Estado 54

   46 asignacion: variable ASIGNACION . expresion PUNTOYCOMA

    error          desplazar e ir al estado 76
    SUMRES         desplazar e ir al estado 77
    OPUNARIO       desplazar e ir al estado 78
    CORIZQ         desplazar e ir al estado 79
    CONSTENTERA    desplazar e ir al estado 80
    CONSTLOGICA    desplazar e ir al estado 81
    CONSTREAL      desplazar e ir al estado 82
    CONSTCARACTER  desplazar e ir al estado 83
    PARIZQ         desplazar e ir al estado 84
    IDENT          desplazar e ir al estado 26

    variable   ir al estado 85
    expresion  ir al estado 86
    constante  ir al estado 87


Estado 55

   44 sentencia: variable AVANRETR . PUNTOYCOMA

    PUNTOYCOMA  desplazar e ir al estado 88


Estado 56

   29 sentencias: $@7 sentencia sentencias .

    $default  reduce usando la regla 29 (sentencias)


Estado 57

   32 sentencia: $@8 bloque .

    $default  reduce usando la regla 32 (sentencia)


Estado 58

   47 si: SI . PARIZQ expresion PARDER ENTONCES sentencia
   50   | SI . PARIZQ expresion PARDER ENTONCES sentencia @13 SINO $@14 sentencia

    PARIZQ  desplazar e ir al estado 89


Estado 59

   35 sentencia: $@9 si . PUNTOYCOMA

    PUNTOYCOMA  desplazar e ir al estado 90


Estado 60

   52 mientras: MIENTRAS . PARIZQ expresion PARDER $@15 sentencia

    PARIZQ  desplazar e ir al estado 91


Estado 61

   37 sentencia: $@10 mientras . PUNTOYCOMA

    PUNTOYCOMA  desplazar e ir al estado 92


Estado 62

   53 entrada: LEER . lista_variables

    IDENT  desplazar e ir al estado 26

    lista_variables  ir al estado 93
    variable         ir al estado 28


Estado 63

   39 sentencia: $@11 entrada . PUNTOYCOMA

    PUNTOYCOMA  desplazar e ir al estado 94


Estado 64

   54 salida: ESCRIBIR . lista_expresiones_cad

    error          desplazar e ir al estado 76
    SUMRES         desplazar e ir al estado 77
    OPUNARIO       desplazar e ir al estado 78
    CORIZQ         desplazar e ir al estado 79
    CONSTENTERA    desplazar e ir al estado 80
    CONSTLOGICA    desplazar e ir al estado 81
    CONSTREAL      desplazar e ir al estado 82
    CONSTCARACTER  desplazar e ir al estado 83
    CONSTCADENA    desplazar e ir al estado 95
    PARIZQ         desplazar e ir al estado 84
    IDENT          desplazar e ir al estado 26

    variable               ir al estado 85
    expresion              ir al estado 96
    lista_expresiones_cad  ir al estado 97
    exp_cad                ir al estado 98
    constante              ir al estado 87


Estado 65

   41 sentencia: $@12 salida . PUNTOYCOMA

    PUNTOYCOMA  desplazar e ir al estado 99


Estado 66

   42 sentencia: repetir_hasta PUNTOYCOMA .

    $default  reduce usando la regla 42 (sentencia)


Estado 67

   43 sentencia: llamada_funcion PUNTOYCOMA .

    $default  reduce usando la regla 43 (sentencia)


Estado 68

   13 lista_variables: variable error lista_variables .

    $default  reduce usando la regla 13 (lista_variables)


Estado 69

   12 lista_variables: variable COMA lista_variables .

    $default  reduce usando la regla 12 (lista_variables)


Estado 70

   22 cabecera_subprograma: PROCEDIMIENTO IDENT $@5 PARIZQ . lista_parametros PARDER $@6 PUNTOYCOMA

    IDENT  desplazar e ir al estado 26

    lista_variables   ir al estado 100
    variable          ir al estado 28
    lista_parametros  ir al estado 101
    parametro         ir al estado 102


Estado 71

   19 declar_subprog: cabecera_subprograma $@4 INICIO sentencias . FIN PUNTOYCOMA

    FIN  desplazar e ir al estado 103


Estado 72

   55 repetir_hasta: PARA variable DOSP . ASIGNACION expresion HASTA expresion HACER INICIO sentencias FIN

    ASIGNACION  desplazar e ir al estado 104


Estado 73

   45 sentencia: DOLAR variable PUNTOYCOMA .

    $default  reduce usando la regla 45 (sentencia)


Estado 74

   83 llamada_funcion: IDENT PARIZQ PARDER .

    $default  reduce usando la regla 83 (llamada_funcion)


Estado 75

   82 llamada_funcion: IDENT PARIZQ $@16 . lista_expresiones PARDER

    error          desplazar e ir al estado 76
    SUMRES         desplazar e ir al estado 77
    OPUNARIO       desplazar e ir al estado 78
    CORIZQ         desplazar e ir al estado 79
    CONSTENTERA    desplazar e ir al estado 80
    CONSTLOGICA    desplazar e ir al estado 81
    CONSTREAL      desplazar e ir al estado 82
    CONSTCARACTER  desplazar e ir al estado 83
    PARIZQ         desplazar e ir al estado 84
    IDENT          desplazar e ir al estado 26

    variable           ir al estado 85
    expresion          ir al estado 105
    lista_expresiones  ir al estado 106
    constante          ir al estado 87


Estado 76

   70 expresion: error .

    $default  reduce usando la regla 70 (expresion)


Estado 77

   58 expresion: SUMRES . expresion

    error          desplazar e ir al estado 76
    SUMRES         desplazar e ir al estado 77
    OPUNARIO       desplazar e ir al estado 78
    CORIZQ         desplazar e ir al estado 79
    CONSTENTERA    desplazar e ir al estado 80
    CONSTLOGICA    desplazar e ir al estado 81
    CONSTREAL      desplazar e ir al estado 82
    CONSTCARACTER  desplazar e ir al estado 83
    PARIZQ         desplazar e ir al estado 84
    IDENT          desplazar e ir al estado 26

    variable   ir al estado 85
    expresion  ir al estado 107
    constante  ir al estado 87


Estado 78

   57 expresion: OPUNARIO . expresion

    error          desplazar e ir al estado 76
    SUMRES         desplazar e ir al estado 77
    OPUNARIO       desplazar e ir al estado 78
    CORIZQ         desplazar e ir al estado 79
    CONSTENTERA    desplazar e ir al estado 80
    CONSTLOGICA    desplazar e ir al estado 81
    CONSTREAL      desplazar e ir al estado 82
    CONSTCARACTER  desplazar e ir al estado 83
    PARIZQ         desplazar e ir al estado 84
    IDENT          desplazar e ir al estado 26

    variable   ir al estado 85
    expresion  ir al estado 108
    constante  ir al estado 87


Estado 79

   69 expresion: CORIZQ . agregado CORDER

    CONSTENTERA    desplazar e ir al estado 109
    CONSTLOGICA    desplazar e ir al estado 110
    CONSTREAL      desplazar e ir al estado 111
    CONSTCARACTER  desplazar e ir al estado 112
    CONSTCADENA    desplazar e ir al estado 113

    agregado             ir al estado 114
    agregado_enteros     ir al estado 115
    agregado_reales      ir al estado 116
    agregado_caracteres  ir al estado 117
    agregado_booleanos   ir al estado 118
    agregado_cadenas     ir al estado 119


Estado 80

   77 constante: CONSTENTERA .

    $default  reduce usando la regla 77 (constante)


Estado 81

   78 constante: CONSTLOGICA .

    $default  reduce usando la regla 78 (constante)


Estado 82

   79 constante: CONSTREAL .

    $default  reduce usando la regla 79 (constante)


Estado 83

   80 constante: CONSTCARACTER .

    $default  reduce usando la regla 80 (constante)


Estado 84

   56 expresion: PARIZQ . expresion PARDER

    error          desplazar e ir al estado 76
    SUMRES         desplazar e ir al estado 77
    OPUNARIO       desplazar e ir al estado 78
    CORIZQ         desplazar e ir al estado 79
    CONSTENTERA    desplazar e ir al estado 80
    CONSTLOGICA    desplazar e ir al estado 81
    CONSTREAL      desplazar e ir al estado 82
    CONSTCARACTER  desplazar e ir al estado 83
    PARIZQ         desplazar e ir al estado 84
    IDENT          desplazar e ir al estado 26

    variable   ir al estado 85
    expresion  ir al estado 120
    constante  ir al estado 87


Estado 85

   67 expresion: variable .

    $default  reduce usando la regla 67 (expresion)


Estado 86

   46 asignacion: variable ASIGNACION expresion . PUNTOYCOMA
   59 expresion: expresion . OPBINARIO expresion
   60          | expresion . OPOR expresion
   61          | expresion . OPRELACIONAL expresion
   62          | expresion . SUMRES expresion
   63          | expresion . OPAND expresion
   64          | expresion . OPBINLISTA expresion
   65          | expresion . ARROBA expresion
   66          | expresion . ARROBA expresion MASMAS expresion

    OPOR          desplazar e ir al estado 121
    OPAND         desplazar e ir al estado 122
    OPRELACIONAL  desplazar e ir al estado 123
    SUMRES        desplazar e ir al estado 124
    OPBINARIO     desplazar e ir al estado 125
    OPBINLISTA    desplazar e ir al estado 126
    ARROBA        desplazar e ir al estado 127
    PUNTOYCOMA    desplazar e ir al estado 128


Estado 87

   68 expresion: constante .

    $default  reduce usando la regla 68 (expresion)


Estado 88

   44 sentencia: variable AVANRETR PUNTOYCOMA .

    $default  reduce usando la regla 44 (sentencia)


Estado 89

   47 si: SI PARIZQ . expresion PARDER ENTONCES sentencia
   50   | SI PARIZQ . expresion PARDER ENTONCES sentencia @13 SINO $@14 sentencia

    error          desplazar e ir al estado 76
    SUMRES         desplazar e ir al estado 77
    OPUNARIO       desplazar e ir al estado 78
    CORIZQ         desplazar e ir al estado 79
    CONSTENTERA    desplazar e ir al estado 80
    CONSTLOGICA    desplazar e ir al estado 81
    CONSTREAL      desplazar e ir al estado 82
    CONSTCARACTER  desplazar e ir al estado 83
    PARIZQ         desplazar e ir al estado 84
    IDENT          desplazar e ir al estado 26

    variable   ir al estado 85
    expresion  ir al estado 129
    constante  ir al estado 87


Estado 90

   35 sentencia: $@9 si PUNTOYCOMA .

    $default  reduce usando la regla 35 (sentencia)


Estado 91

   52 mientras: MIENTRAS PARIZQ . expresion PARDER $@15 sentencia

    error          desplazar e ir al estado 76
    SUMRES         desplazar e ir al estado 77
    OPUNARIO       desplazar e ir al estado 78
    CORIZQ         desplazar e ir al estado 79
    CONSTENTERA    desplazar e ir al estado 80
    CONSTLOGICA    desplazar e ir al estado 81
    CONSTREAL      desplazar e ir al estado 82
    CONSTCARACTER  desplazar e ir al estado 83
    PARIZQ         desplazar e ir al estado 84
    IDENT          desplazar e ir al estado 26

    variable   ir al estado 85
    expresion  ir al estado 130
    constante  ir al estado 87


Estado 92

   37 sentencia: $@10 mientras PUNTOYCOMA .

    $default  reduce usando la regla 37 (sentencia)


Estado 93

   53 entrada: LEER lista_variables .

    $default  reduce usando la regla 53 (entrada)


Estado 94

   39 sentencia: $@11 entrada PUNTOYCOMA .

    $default  reduce usando la regla 39 (sentencia)


Estado 95

   76 exp_cad: CONSTCADENA .

    $default  reduce usando la regla 76 (exp_cad)


Estado 96

   59 expresion: expresion . OPBINARIO expresion
   60          | expresion . OPOR expresion
   61          | expresion . OPRELACIONAL expresion
   62          | expresion . SUMRES expresion
   63          | expresion . OPAND expresion
   64          | expresion . OPBINLISTA expresion
   65          | expresion . ARROBA expresion
   66          | expresion . ARROBA expresion MASMAS expresion
   75 exp_cad: expresion .

    OPOR          desplazar e ir al estado 121
    OPAND         desplazar e ir al estado 122
    OPRELACIONAL  desplazar e ir al estado 123
    SUMRES        desplazar e ir al estado 124
    OPBINARIO     desplazar e ir al estado 125
    OPBINLISTA    desplazar e ir al estado 126
    ARROBA        desplazar e ir al estado 127

    $default  reduce usando la regla 75 (exp_cad)


Estado 97

   54 salida: ESCRIBIR lista_expresiones_cad .

    $default  reduce usando la regla 54 (salida)


Estado 98

   73 lista_expresiones_cad: exp_cad . COMA lista_expresiones_cad
   74                      | exp_cad .

    COMA  desplazar e ir al estado 131

    $default  reduce usando la regla 74 (lista_expresiones_cad)


Estado 99

   41 sentencia: $@12 salida PUNTOYCOMA .

    $default  reduce usando la regla 41 (sentencia)


Estado 100

   27 parametro: lista_variables . DOSP tipo

    DOSP  desplazar e ir al estado 132


Estado 101

   22 cabecera_subprograma: PROCEDIMIENTO IDENT $@5 PARIZQ lista_parametros . PARDER $@6 PUNTOYCOMA

    PARDER  desplazar e ir al estado 133


Estado 102

   24 lista_parametros: parametro . PUNTOYCOMA lista_parametros
   25                 | parametro . error PUNTOYCOMA lista_parametros
   26                 | parametro .

    error       desplazar e ir al estado 134
    PUNTOYCOMA  desplazar e ir al estado 135

    PARDER  reduce usando la regla 26 (lista_parametros)


Estado 103

   19 declar_subprog: cabecera_subprograma $@4 INICIO sentencias FIN . PUNTOYCOMA

    PUNTOYCOMA  desplazar e ir al estado 136


Estado 104

   55 repetir_hasta: PARA variable DOSP ASIGNACION . expresion HASTA expresion HACER INICIO sentencias FIN

    error          desplazar e ir al estado 76
    SUMRES         desplazar e ir al estado 77
    OPUNARIO       desplazar e ir al estado 78
    CORIZQ         desplazar e ir al estado 79
    CONSTENTERA    desplazar e ir al estado 80
    CONSTLOGICA    desplazar e ir al estado 81
    CONSTREAL      desplazar e ir al estado 82
    CONSTCARACTER  desplazar e ir al estado 83
    PARIZQ         desplazar e ir al estado 84
    IDENT          desplazar e ir al estado 26

    variable   ir al estado 85
    expresion  ir al estado 137
    constante  ir al estado 87


Estado 105
